@@ -1,4 +1,4 @@
-# $Id: makefile.in,v 11.2 1997/09/13 17:08:13 tom Exp $
+# $Id: makefile.in,v 11.3 1997/09/28 20:14:16 tom Exp $
 # Make-file for RCS baseline utility
 
 THIS	= baseline
@@ -18,7 +18,6 @@ install:	$(SOURCES) $(ALL)
 clean:				; -$(RM) $(CLEAN)
 distclean:	clean		; -$(RM) $(ALL)
 run_test:
-sources:	$(SOURCES)
 
 ####### (Details of Productions) ###############################################
 $B/$(THIS):	$(THIS).o $(LIB_DEPS)	; $(LINK) -o $@ $(THIS).o $(LIB_ARGS)
