@@ -1,4 +1,4 @@
-# $Id: makefile.in,v 11.1 1997/09/13 16:33:53 tom Exp $
+# $Id: makefile.in,v 11.2 1997/09/28 20:14:16 tom Exp $
 # make-file for testing RCS skeleton tree utility
 
 THIS	= baseline
@@ -17,7 +17,6 @@ ALL	= run_tool
 all:		$(SOURCES) $(ALL)
 clean:				; -$(RM) $(CLEAN)
 distclean:	clean		; -$(RM) $(ALL)
-sources:	$(SOURCES)
 lint.out:
 run_test:	$(SOURCES) $(ALL) ; $(RUN_TESTS)
 
